# herald

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.intermediate  Dockerfile.package  Dockerfile.precreate-build  Jenkinsfile  Makefile  README.md  build.rs  checktest.sh
.cargo/: config
.github/workflows/: build.yaml  pr-check.yaml
HelmReleaseSpec/: Cargo.toml  README.md  ov3-helmreleases.helm.fluxcd.io.yaml
HelmReleaseSpec/.openapi-generator/: FILES
HelmReleaseSpec/docs/: HelmReleaseSpec.md  HelmReleaseSpecRollback.md  HelmReleaseSpecValueFileSecrets.md
HelmReleaseSpec/src/apis/: configuration.rs
HelmReleaseSpec/src/models/: helm_release_chart_git.rs  helm_release_chart_pull_secret_spec.rs  helm_release_chart_repo_spec.rs  helm_release_chart_target_spec.rs  helm_release_spec.rs  helm_release_spec_rollback.rs  helm_release_spec_value_file_secrets.rs  mod.rs
deploy/: crd-watcher.yaml  deployment-herald.yaml  kustomization.yaml  watcher-test.yaml
docker/: entrypoint.sh
helm/herald/: Chart.yaml  values.yaml
helm/herald/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/herald/templates/tests/: test-connection.yaml
src/: main.rs
src/models/: helm_release_chart_pull_secret_spec.rs  helm_release_chart_target_spec.rs  helm_release_spec.rs  helm_release_spec_rollback.rs  helm_release_spec_value_file_secrets.rs  mod.rs  watcher_item_spec.rs  watcher_notifier_spec.rs  watcher_spec.rs
src/tests/: mod.rs  test_btree.rs  test_send_hook.rs
src/watching/: mod.rs  send_hook.rs  watch_exec.rs  watch_types.rs
