[package]
name = "herald"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "kube/rustls-tls", "kube-runtime/rustls-tls"]

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
futures = "0.3.5"
kube = "0.39.0"
kube-runtime = "0.39.0"
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.8.12"
tokio = { version = "0.2.21", features = ["full"] }
color-eyre = "0.5.0"
snafu = { version = "0.6.8", features = ["futures"] }
# Some Api::delete methods use Either
either = "1.5.3"
# Some configuration tweaking require reqwest atm
reqwest = { version = "0.10.6", default-features = false, features = ["json", "gzip", "stream"] }
