[package]
name = "herald"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "kube/rustls-tls", "kube-runtime/rustls-tls"]

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
futures = "0.3.5"
kube = { version = "0.39.0", default_features = false, features = ["derive"] }
kube-runtime = { version ="0.39.0", default_features = false }
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.8.12"
tokio = { version = "0.2.21", features = ["full"] }
color-eyre = "0.5.0"
snafu = { version = "0.6.8", features = ["futures"] }
# Some Api::delete methods use Either
either = "1.5.3"
# Some configuration tweaking require reqwest atm
reqwest = { version = "0.10.6", default-features = false, features = ["json", "gzip", "stream"] }
thiserror = "1.0.20"
strum_macros = "0.19.2"
strum = "0.19.2"
prometheus = "0.9.0"
prometheus-static-metric = "0.2.0"
lazy_static = "1.4.0"
hyper = "0.13.7"