[package]
name = "herald"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "kube/rustls-tls", "kube-runtime/rustls-tls"]

[dev-dependencies]
httpmock = "0.5.5"
httpmock-macros = "0.4.0"

[build-dependencies]
auditable-build = "0.1.0"

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
futures = "0.3.13"
kube = { version = "0.51.0", default_features = false, features = ["derive"] }
kube-runtime = { version = "0.51.0", default_features = false }
k8s-openapi = { version = "0.11.0", features = ["v1_18"], default-features = false }
log = "0.4.14"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = { version = "1.2.0", features = ["full"] }
color-eyre = "0.5.10"
snafu = { version = "0.6.10", features = ["futures"] }
# Some Api::delete methods use Either
either = "1.6.1"
# Some configuration tweaking require reqwest atm
reqwest = { version = "0.11.1", default-features = false, features = ["json", "gzip", "stream"] }
thiserror = "1.0.24"
strum_macros = "0.20.1"
strum = "0.20.0"
prometheus = "0.11.0"
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
hyper = "0.14.4"
handlebars = "3.5.3"
derive-error = "0.0.5"
auditable = "0.1.0"
schemars = "0.8.0"
schemars_derive = "0.8.0"
jsonschema = "0.6.0"