[package]
name = "helmreleasespec"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
kube = { version = "0.39.0", features = ["derive"]}
k8s-openapi = {version = "0.9.0"}
[dependencies.reqwest]
version = "^0.10"
default-features = false
features = ["json"]

[dev-dependencies]
